disable protection except RKP_CFP

--- a/arch/arm64/configs/exynos8895-dream2lte_defconfig
+++ b/arch/arm64/configs/exynos8895-dream2lte_defconfig
@@ -420,13 +420,13 @@ CONFIG_NR_CPUS=8
 CONFIG_HOTPLUG_CPU=y
 CONFIG_TIMA=y
 # CONFIG_TIMA_LKMAUTH is not set
-CONFIG_RKP=y
-CONFIG_UH_RKP=y
+# CONFIG_RKP is not set
+# CONFIG_UH_RKP is not set
 # CONFIG_RKP_DEBUG is not set
-CONFIG_RKP_KDP=y
-CONFIG_RKP_NS_PROT=y
-CONFIG_RKP_DMAP_PROT=y
-CONFIG_RKP_6G=y
+# CONFIG_RKP_KDP is not set
+# CONFIG_RKP_NS_PROT is not set
+# CONFIG_RKP_DMAP_PROT is not set
+# CONFIG_RKP_6G is not set
 CONFIG_RELOCATABLE_KERNEL=y
 
 #
@@ -1048,7 +1048,7 @@ CONFIG_NET_SCH_FIFO=y
 # CONFIG_HSR is not set
 # CONFIG_NET_SWITCHDEV is not set
 # CONFIG_NET_L3_MASTER_DEV is not set
-CONFIG_KNOX_NCM=y
+# CONFIG_KNOX_NCM is not set
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_XPS=y
@@ -1249,7 +1249,7 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_HP_ILO is not set
 # CONFIG_APDS9802ALS is not set
 # CONFIG_ISL29003 is not set
-CONFIG_KNOX_KAP=y
+# CONFIG_KNOX_KAP is not set
 # CONFIG_ISL29020 is not set
 # CONFIG_SENSORS_TSL2550 is not set
 # CONFIG_SENSORS_BH1780 is not set
@@ -5252,11 +5252,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 #
 # Samsung Rooting Restriction Feature
 #
-CONFIG_SEC_RESTRICT_ROOTING=y
-CONFIG_SEC_RESTRICT_SETUID=y
-CONFIG_SEC_RESTRICT_FORK=y
-CONFIG_SEC_RESTRICT_ROOTING_LOG=y
-
+# CONFIG_SEC_RESTRICT_ROOTING is not set
 #
 # Security options
 #
@@ -5300,7 +5296,7 @@ CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
 # CONFIG_TZ_ICCC is not set
-CONFIG_SECURITY_DEFEX=y
+# CONFIG_SECURITY_DEFEX is not set
 # CONFIG_DEFEX_KERNEL_ONLY is not set
 CONFIG_SECURITY_DSMS=y
 CONFIG_DEFAULT_SECURITY_SELINUX=y
