--- a/arch/arm64/configs/ksu.config
+++ b/arch/arm64/configs/ksu.config
@@ -1,4 +1,12 @@
+CONFIG_LOCALVERSION="-mbuh-ksu"
+CONFIG_LOCALVERSION_AUTO=n
+
 CONFIG_KSU=y
-CONFIG_OVERLAY_FS=y
+CONFIG_KSU_LSM_SECURITY_HOOKS=n
 CONFIG_KPROBES=n
-CONFIG_KSU_WITH_KPOBES=n
+CONFIG_HAVE_KPROBES=n
+CONFIG_KPROBE_EVENTS=n
+
+# CONFIG_KSU_DEBUG is not set
+# CONFIG_CC_WERROR is not set
+CONFIG_OVERLAY_FS=y
